# smart_cow

./: CMakeLists.txt  Makefile
src/: main.cpp  main.d
src/api/: ApiServer.cpp  ApiServer.d  ApiServer.h
src/common/: Types.h
src/control/: CommandPipe.cpp  CommandPipe.d  CommandPipe.h  PTZController.cpp  PTZController.d  PTZController.h
src/detection/: DetectionBuffer.cpp  DetectionBuffer.d  DetectionBuffer.h  Detector.cpp  Detector.d  Detector.h  Tracker.cpp  Tracker.d  Tracker.h
src/pipeline/: CameraSource.cpp  CameraSource.d  CameraSource.h  Pipeline.cpp  Pipeline.d  Pipeline.h  StreamOutput.cpp  StreamOutput.d  StreamOutput.h
src/signaling/: SignalingClient.cpp  SignalingClient.d  SignalingClient.h
src/utils/: Config.cpp  Config.d  Config.h  CurlClient.cpp  CurlClient.d  CurlClient.h  DeviceSetting.cpp  DeviceSetting.d  DeviceSetting.h  Logger.cpp  Logger.d  Logger.h  ProcessManager.cpp  ProcessManager.d  ProcessManager.h  SerialComm.cpp  SerialComm.d  SerialComm.h  SocketComm.cpp  SocketComm.d  SocketComm.h  SocketCommUDP.cpp  SocketCommUDP.h
src/webrtc/: PeerManager.cpp  PeerManager.d  PeerManager.h  WebRTCSenderProcess.cpp  WebRTCSenderProcess.d  WebRTCSenderProcess.h
